# palette-core

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: css-naming-overhaul.md  css-variables.md  guide.md
presets/: ayu_dark.toml  ayu_light.toml  ayu_mirage.toml  catppuccin.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  dracula.toml  everforest_dark.toml  everforest_light.toml  github_dark.toml  github_light.toml  golden_hour.toml  golden_hour_dusk.toml  golden_hour_twilight.toml  gruvbox_dark.toml  gruvbox_light.toml  kanagawa.toml  monokai.toml  nord.toml  one_dark.toml  one_light.toml  rose_pine.toml  rose_pine_dawn.toml  rose_pine_moon.toml  solarized_dark.toml  solarized_light.toml  tokyonight.toml  tokyonight_day.toml  tokyonight_moon.toml  tokyonight_storm.toml
src/: color.rs  contrast.rs  css.rs  egui.rs  error.rs  gradient.rs  lib.rs  manifest.rs  manipulation.rs  merge.rs  palette.rs  platform.rs  registry.rs  resolved.rs  snapshot.rs  style.rs  syntect.rs  terminal.rs  wasm.rs
tests/: color.rs  common.rs  contrast.rs  css.rs  egui.rs  gradient.rs  manifest.rs  manipulation.rs  merge.rs  palette.rs  platform.rs  registry.rs  resolved.rs  snapshot.rs  style.rs  syntect.rs  terminal.rs  wasm.rs
